--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ var num = Math.floor(Math.random() * 3);
 document.getElementById("canvas").style.backgroundColor=col[num];
 };
 </script>
-<h1>Hello World. This is my bucket file!</h1>
-<h1> Pranab Das welcome you </h1>
+<h1>Hello World. !</h1>
+<h1> Pranab Das welcome you...in Git </h1>
 </body>
 </html>
