--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ document.getElementById("canvas").style.backgroundColor=col[num];
 };
 </script>
 <h1>Hello World. !</h1>
-<h1> Pranab Das welcome you...in Git </h1>
+<h1> Pranab Das welcomes you...in Git </h1>
+<img src="fall.jpg" alt="Fall" width="42" height="42" style="border:5px solid black">
 </body>
 </html>
